<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicapp.ChoosePlaystyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Label of the activity -->
        <TextView
            style="@style/activityLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choosePlaystyleU" />

        <TextView
            style="@style/activityImplementationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choosePlaystylePointText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <!-- Button to play all songs  -->
        <Button
            android:id="@+id/playAllSongsButton"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAllSongs" />

        <!-- Button to play songs sorted by artist -->
        <Button
            android:id="@+id/playSortedByArtistButton"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSortedByArtist" />

        <!-- Button to play songs sorted by album -->
        <Button
            android:id="@+id/playSortedByAlbumButton"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSortedByAlbum" />

        <!-- Button to choose a playlist -->
        <Button
            android:id="@+id/playPlaylistsButton"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonPlaylists" />

    </LinearLayout>

</RelativeLayout>